# shibagame-n64

./: .gitignore  compile.sh  compile_docker.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  spec  toolchain.mips64-elf.cmake  toolchain.n64sdkmod.cmake
